# shortener

./: .gitignore  Readme.md  docker-compose.yml
backend/: .gitignore  Dockerfile  main.py  pyproject.toml
backend/tests/: test_main.py
frontend/: Dockerfile  index.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ShortenLink.css  ShortenLink.tsx
frontend/src/utils/: validateUrl.ts
